# my-project

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  LICENSE  MANUAL-TEST-CHECKLIST.md  MILESTONES.md  PROMPTS.md  README.en.md  README.md  SECURITY.md  SRS.md  TASKS.md  kickoff.yaml  package-lock.json  package.json  pyproject.toml  report.json  report.md  setup.sh  targets.txt
.github/workflows/: ci.yml  demo.yml  dns-guard.yml  online-axfr.yml
app/: layout.tsx  page.tsx  providers.tsx
app/app/: layout.tsx  page.tsx
components/auth/: email-login-form.tsx  sign-out-button.tsx
components/history/: export-buttons.tsx
components/navigation/: app-nav.tsx
components/scan/: scan-form.tsx
components/settings/: checkout-button.tsx
config/: allowlist.txt  fingerprints.json  labels.yaml  settings.yaml  severity.yaml
config/fieldmap/: sample-json.yaml  sample-nginx.yaml  sample-regex.yaml
data/: usage_index.json
docs/: OPERATIONS.md
docs/mvp/: delivery-plan.md  progress-log.md  requirements.md  technical-checklist.md
e2e/: auth.spec.ts  barcode.spec.ts  inventory.spec.ts  transactions.spec.ts
e2e/helpers/: auth.ts
examples/: README.md
lib/: env.ts
lib/auth/: actions.ts  server.ts
lib/cloudflare/: client.ts
providers/: query-client-provider.tsx
scripts/: README.md  generate_demo.py  preflight.py
supabase/: functions.sql  schema.sql  types.ts
tests/: conftest.py  test_cli_demo.py  test_fieldmap.py  test_idn.py  test_notify.py  test_placeholder.py  test_pro_features.py  test_reporting.py  test_static_rules.py
(+189 files in other folders)
